temporary classes to fix carousel captions on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13774,6 +13774,9 @@ ul.style-checklist a:hover {
   .flipcards.grid.cols-4, .grid.cols-4, .commonquestions.grid.cols-3 {
     --bs-columns: 2;
   }
+  .figcaption {
+    max-width: 100%;
+  }
 }
 @media screen and (max-width: 40em) {
   .grid.cols-2, .grid.cols-3, .commonquestions.grid.cols-3, .flipcards.grid.cols-4, .grid.cols-4 {
