--- a/assets/scss/_temp/_cytemp.scss
+++ b/assets/scss/_temp/_cytemp.scss
@@ -343,6 +343,9 @@ ul.style-checklist a:hover {
     --bs-columns: 2;
   }
 
+  .figcaption {
+    max-width: 100%;
+  }
 
 }
 
